# logos-standalone-app

./: .gitignore  .mcp.json  README.md  flake.nix
.github/workflows/: ci.yml
app/: CMakeLists.txt  LogosBridge.cpp  LogosBridge.h  ViewModuleHost.cpp  ViewModuleHost.h  main.cpp  mainwindow.cpp  mainwindow.h
app/ui-host/: main.cpp
nix/: app.nix  mkPluginTest.nix  smoke-test.nix
tests/: flake.nix  test-counter-qml.mjs
